--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,42 +6,68 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>1402</width>
+    <height>788</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">QMainWindow{
+	background-color:black;
+}</string>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QLineEdit" name="name">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>80</y>
+      <x>670</x>
+      <y>170</y>
       <width>201</width>
       <height>24</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLineEdit{
+	background-color:gray;
+	font-size:15px;
+	border-radius:5px;
+}</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="reps">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>160</y>
+      <x>670</x>
+      <y>250</y>
       <width>201</width>
       <height>24</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLineEdit{
+	background-color:gray;
+	font-size:15px;
+	border-radius:5px;
+}</string>
     </property>
    </widget>
    <widget class="QPushButton" name="btnAdd">
     <property name="geometry">
      <rect>
-      <x>370</x>
-      <y>250</y>
+      <x>670</x>
+      <y>330</y>
       <width>80</width>
       <height>51</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton{
+	font-size:25px;
+	background-color:gray;
+	border-radius:10px;
+}</string>
     </property>
     <property name="text">
      <string>+</string>
@@ -50,21 +76,35 @@
    <widget class="QListWidget" name="listWorkouts">
     <property name="geometry">
      <rect>
-      <x>210</x>
-      <y>320</y>
+      <x>520</x>
+      <y>400</y>
       <width>391</width>
       <height>251</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QListWidget{
+	background-color:gray;
+	color:white;
+	font-size:15px;
+	border-radius:10px;
+}</string>
     </property>
    </widget>
    <widget class="QLabel" name="nameLabel">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>80</y>
-      <width>101</width>
+      <x>540</x>
+      <y>170</y>
+      <width>111</width>
       <height>21</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel{
+	color:white;
+	font-size:15px;
+}</string>
     </property>
     <property name="text">
      <string>Excercise Name: </string>
@@ -73,11 +113,17 @@
    <widget class="QLabel" name="repsLable">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>160</y>
+      <x>540</x>
+      <y>250</y>
       <width>71</width>
       <height>21</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel{
+	color:white;
+	font-size:15px;
+}</string>
     </property>
     <property name="text">
      <string>Reps:</string>
@@ -86,34 +132,53 @@
    <widget class="QLabel" name="weightLabel">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>200</y>
+      <x>540</x>
+      <y>290</y>
       <width>71</width>
       <height>21</height>
      </rect>
     </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel{
+	color:white;
+	font-size:15px;
+}</string>
+    </property>
     <property name="text">
-     <string>Weight:</string>
+     <string>Weight(kg):</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="weight">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>200</y>
+      <x>670</x>
+      <y>290</y>
       <width>201</width>
       <height>24</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLineEdit{
+	background-color:gray;
+	font-size:15px;
+	border-radius:5px;
+}</string>
     </property>
    </widget>
    <widget class="QLabel" name="setsLable">
     <property name="geometry">
      <rect>
-      <x>200</x>
-      <y>120</y>
+      <x>540</x>
+      <y>210</y>
       <width>71</width>
       <height>21</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLabel{
+	color:white;
+	font-size:15px;
+}</string>
     </property>
     <property name="text">
      <string>Sets:</string>
@@ -122,11 +187,40 @@
    <widget class="QLineEdit" name="sets">
     <property name="geometry">
      <rect>
-      <x>310</x>
-      <y>120</y>
+      <x>670</x>
+      <y>210</y>
       <width>201</width>
       <height>24</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QLineEdit{
+	background-color:gray;
+	font-size:15px;
+	border-radius:5px;
+}</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>510</x>
+      <y>10</y>
+      <width>400</width>
+      <height>151</height>
+     </rect>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>400</width>
+      <height>300</height>
+     </size>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap>../../../../Downloads/WorkoutBroLogo.png</pixmap>
     </property>
    </widget>
   </widget>
